--- a/BankAccountManagament/BankAccountManagament.csproj
+++ b/BankAccountManagament/BankAccountManagament.csproj
@@ -10,4 +10,10 @@
       <ProjectReference Include="..\Controller\Controller.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Reference Include="Personi, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
+        <HintPath>..\Personi\Personi\bin\Debug\Personi.dll</HintPath>
+      </Reference>
+    </ItemGroup>
+
 </Project>
