--- a/BankAccountManagamentLibrary/BankAccountManagamentLibrary.csproj
+++ b/BankAccountManagamentLibrary/BankAccountManagamentLibrary.csproj
@@ -10,4 +10,8 @@
       </Reference>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Controller\Controller.csproj" />
+    </ItemGroup>
+
 </Project>
